--- a/pream/FilterView/FilterCollection.storyboard
+++ b/pream/FilterView/FilterCollection.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -40,24 +41,43 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spring" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVl-os-tGL">
                                             <rect key="frame" x="0.0" y="60" width="50" height="15"/>
                                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="12"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="textColor" name="grey"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ek-7u-BNw" customClass="DimmedView" customModule="pream" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="55"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZ9-ke-37N">
+                                                    <rect key="frame" x="8" y="10.5" width="34" height="34"/>
+                                                    <state key="normal" image="icDetail"/>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="ZZ9-ke-37N" firstAttribute="centerY" secondItem="4Ek-7u-BNw" secondAttribute="centerY" id="1Sw-AR-ChY"/>
+                                                <constraint firstAttribute="height" constant="55" id="DUk-Sc-eru"/>
+                                                <constraint firstItem="ZZ9-ke-37N" firstAttribute="centerX" secondItem="4Ek-7u-BNw" secondAttribute="centerX" id="zyp-CF-Ubj"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                 </view>
                                 <constraints>
                                     <constraint firstItem="jVl-os-tGL" firstAttribute="leading" secondItem="AVQ-05-qlm" secondAttribute="leading" id="7oq-ew-BJL"/>
                                     <constraint firstItem="0yV-7f-dTZ" firstAttribute="leading" secondItem="AVQ-05-qlm" secondAttribute="leading" id="A1r-JY-1Ce"/>
                                     <constraint firstAttribute="trailing" secondItem="jVl-os-tGL" secondAttribute="trailing" id="Cfj-RU-ewo"/>
+                                    <constraint firstItem="4Ek-7u-BNw" firstAttribute="top" secondItem="AVQ-05-qlm" secondAttribute="top" id="H1J-eY-WXE"/>
                                     <constraint firstItem="jVl-os-tGL" firstAttribute="top" secondItem="0yV-7f-dTZ" secondAttribute="bottom" constant="5" id="Kmg-lJ-scL"/>
                                     <constraint firstItem="0yV-7f-dTZ" firstAttribute="top" secondItem="AVQ-05-qlm" secondAttribute="top" constant="20" id="Oy1-EN-sUi"/>
                                     <constraint firstAttribute="bottom" secondItem="jVl-os-tGL" secondAttribute="bottom" id="PXS-l5-9uI"/>
+                                    <constraint firstAttribute="trailing" secondItem="4Ek-7u-BNw" secondAttribute="trailing" id="Tqu-vn-erT"/>
+                                    <constraint firstItem="4Ek-7u-BNw" firstAttribute="leading" secondItem="AVQ-05-qlm" secondAttribute="leading" id="VS3-l4-1cI"/>
                                     <constraint firstAttribute="trailing" secondItem="0yV-7f-dTZ" secondAttribute="trailing" id="dWe-FQ-K8E"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="dimmedView" destination="4Ek-7u-BNw" id="fD1-tc-9QH"/>
                                     <outlet property="filterImageView" destination="0yV-7f-dTZ" id="hhy-58-5Os"/>
                                     <outlet property="filterNameLabel" destination="jVl-os-tGL" id="2NL-hp-1Ka"/>
-                                    <outlet property="imageHeight" destination="iOW-pp-Eme" id="Sv3-Eb-hmH"/>
+                                    <outlet property="imageHeightConstraint" destination="iOW-pp-Eme" id="Sv3-Eb-hmH"/>
                                     <outlet property="topConstraint" destination="Oy1-EN-sUi" id="Wv8-Ez-Hli"/>
                                 </connections>
                             </collectionViewCell>
@@ -73,4 +93,10 @@
             <point key="canvasLocation" x="16.800000000000001" y="35.532233883058474"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icDetail" width="34" height="34"/>
+        <namedColor name="grey">
+            <color red="1" green="1" blue="1" alpha="0.60000002384185791" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
