--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -95,9 +95,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xa9-a7-DXG" customClass="CameraManager" customModule="pream" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q2H-nO-yAM" customClass="GPUImageView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                            </imageView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-P1-C8A" customClass="BlurView" customModule="pream" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="107"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -242,12 +243,12 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0x6-bi-eO1"/>
-                            <constraint firstAttribute="bottom" secondItem="xa9-a7-DXG" secondAttribute="bottom" id="4FR-eh-qlt"/>
+                            <constraint firstAttribute="bottom" secondItem="Q2H-nO-yAM" secondAttribute="bottom" id="4LI-aC-nPF"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="bottom" secondItem="UrY-P1-C8A" secondAttribute="bottom" id="60m-hK-lMk"/>
-                            <constraint firstItem="xa9-a7-DXG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7MT-Xx-owS"/>
+                            <constraint firstItem="Q2H-nO-yAM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Kb-dN-bpZ"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9UA-3P-FPL"/>
-                            <constraint firstItem="xa9-a7-DXG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DW4-Bf-Hz0"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dn3-8O-wiM"/>
+                            <constraint firstItem="Q2H-nO-yAM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IKZ-3Y-ZFp"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JD9-I8-XdS"/>
                             <constraint firstAttribute="bottom" secondItem="7DG-UB-7q2" secondAttribute="bottom" id="K0V-k4-HSj"/>
                             <constraint firstItem="OwD-Zi-m1h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lha-hS-Chk"/>
@@ -264,8 +265,8 @@
                             <constraint firstItem="mVf-gm-oAc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mae-qU-fyF"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mfJ-ra-SPb"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="VEd-gE-dL9" secondAttribute="top" id="ple-de-Flz"/>
-                            <constraint firstItem="xa9-a7-DXG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="sEB-WF-sOD"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="OwD-Zi-m1h" secondAttribute="bottom" id="xy2-w5-L5F"/>
+                            <constraint firstItem="Q2H-nO-yAM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="yg7-gT-nHu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -275,11 +276,11 @@
                         <outlet property="cameraButtonBottomConstraint" destination="sNI-4V-eVc" id="TfG-sH-rIi"/>
                         <outlet property="cameraButtonHeightConstraint" destination="IfJ-K1-Hxe" id="SeR-2B-eZk"/>
                         <outlet property="cameraButtonWidthConstraint" destination="gRd-ZZ-ThW" id="h5a-sd-H9N"/>
-                        <outlet property="cameraManager" destination="xa9-a7-DXG" id="s7R-s4-fKH"/>
                         <outlet property="cameraShotButton" destination="eu1-FW-QOE" id="veH-MD-hA3"/>
                         <outlet property="changeRatioButton" destination="lTV-9d-nrG" id="qoL-04-RVh"/>
                         <outlet property="convertCameraButton" destination="KTO-4I-KEq" id="8Dj-vT-lMC"/>
                         <outlet property="filterView" destination="OwD-Zi-m1h" id="m5f-Ys-eFQ"/>
+                        <outlet property="gpuImageView" destination="Q2H-nO-yAM" id="AnY-7U-ZLV"/>
                         <outlet property="libraryButton" destination="Avu-oK-WfQ" id="qPl-cZ-Fsq"/>
                         <outlet property="shotEffectView" destination="mVf-gm-oAc" id="Xwd-6d-zcP"/>
                         <outlet property="topBlurView" destination="UrY-P1-C8A" id="cxD-lV-96u"/>
