--- a/pream/FilterListView/MyFilterCategory.storyboard
+++ b/pream/FilterListView/MyFilterCategory.storyboard
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BB5-sc-8hv">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tIo-gx-5aN">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--My Filter Category View Controller-->
         <scene sceneID="WLW-ky-sJS">
             <objects>
-                <viewController id="BB5-sc-8hv" sceneMemberID="viewController">
+                <viewController id="BB5-sc-8hv" customClass="MyFilterCategoryViewController" customModule="pream" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cQz-AJ-QBc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HmJ-sk-4yI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="61"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="61"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rMQ-Ny-cq0">
                                         <rect key="frame" x="20" y="15.5" width="30" height="30"/>
                                         <state key="normal" title="뒤로"/>
+                                        <connections>
+                                            <action selector="backButtonAction:" destination="BB5-sc-8hv" eventType="touchUpInside" id="aA2-Cg-FmD"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY FILTER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibW-VZ-fRE">
-                                        <rect key="frame" x="144" y="19.5" width="87" height="22"/>
+                                        <rect key="frame" x="256.5" y="19.5" width="87" height="22"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
                                         <color key="textColor" name="greyishBrownTwo"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bbg-Tc-k5S">
-                                        <rect key="frame" x="280" y="15.5" width="30" height="30"/>
+                                        <rect key="frame" x="505" y="15.5" width="30" height="30"/>
                                         <state key="normal" title="설정"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RzI-T0-R6A">
-                                        <rect key="frame" x="325" y="15.5" width="30" height="30"/>
+                                        <rect key="frame" x="550" y="15.5" width="30" height="30"/>
                                         <state key="normal" title="추가"/>
                                     </button>
                                 </subviews>
@@ -61,7 +60,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Cs3-Yr-UUV">
-                                <rect key="frame" x="20" y="117" width="335" height="550"/>
+                                <rect key="frame" x="0.0" y="117" width="600" height="483"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I0Q-K6-C5d">
                                     <size key="itemSize" width="335" height="110"/>
@@ -70,14 +69,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="A4P-sp-SHt">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="110"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyFilterCategoryCollectionViewCell" id="A4P-sp-SHt" customClass="MyFilterCategoryCollectionViewCell" customModule="pream" customModuleProvider="target">
+                                        <rect key="frame" x="132.5" y="0.0" width="335" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="335" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I5Z-nG-dGY">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="picachu" translatesAutoresizingMaskIntoConstraints="NO" id="I5Z-nG-dGY">
                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="110"/>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q9d-hF-cGX" customClass="BlurView" customModule="pream" customModuleProvider="target">
@@ -115,6 +114,7 @@
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="I5Z-nG-dGY" secondAttribute="trailing" id="69v-Sj-p4q"/>
+                                            <constraint firstItem="N6t-mC-w1Y" firstAttribute="centerY" secondItem="A4P-sp-SHt" secondAttribute="centerY" constant="-7.5" id="EPN-qe-3Sn"/>
                                             <constraint firstItem="Q9d-hF-cGX" firstAttribute="top" secondItem="A4P-sp-SHt" secondAttribute="top" id="Eau-No-nau"/>
                                             <constraint firstItem="I5Z-nG-dGY" firstAttribute="leading" secondItem="A4P-sp-SHt" secondAttribute="leading" id="Erl-c3-wA6"/>
                                             <constraint firstAttribute="trailing" secondItem="ydd-mR-IaL" secondAttribute="trailing" constant="20" id="Iet-Kb-6yJ"/>
@@ -128,13 +128,22 @@
                                             <constraint firstItem="WGv-63-Bkd" firstAttribute="centerX" secondItem="A4P-sp-SHt" secondAttribute="centerX" id="c2n-k1-DG4"/>
                                             <constraint firstItem="WGv-63-Bkd" firstAttribute="top" secondItem="N6t-mC-w1Y" secondAttribute="bottom" id="c3l-9K-RGK"/>
                                             <constraint firstItem="Q9d-hF-cGX" firstAttribute="leading" secondItem="A4P-sp-SHt" secondAttribute="leading" id="fA7-Ua-jqV"/>
-                                            <constraint firstItem="N6t-mC-w1Y" firstAttribute="top" secondItem="A4P-sp-SHt" secondAttribute="top" constant="33" id="oF5-Mw-5Ui"/>
                                             <constraint firstAttribute="bottom" secondItem="MVz-Kj-TFG" secondAttribute="bottom" constant="11" id="sRu-aA-Pzt"/>
                                             <constraint firstAttribute="bottom" secondItem="I5Z-nG-dGY" secondAttribute="bottom" id="sxZ-df-4sh"/>
                                             <constraint firstAttribute="bottom" secondItem="Q9d-hF-cGX" secondAttribute="bottom" id="zqX-OF-SRF"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="categoryBackgroundImageView" destination="I5Z-nG-dGY" id="IGG-ue-Kzw"/>
+                                            <outlet property="categoryDetailLabel" destination="WGv-63-Bkd" id="4Rt-3t-vM1"/>
+                                            <outlet property="categoryNameLabel" destination="N6t-mC-w1Y" id="gOd-nH-e8W"/>
+                                            <outlet property="numberOfFiltersLabel" destination="MVz-Kj-TFG" id="91T-Of-uJ8"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BB5-sc-8hv" id="bq4-lh-Ptf"/>
+                                    <outlet property="delegate" destination="BB5-sc-8hv" id="kW0-n7-VPK"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -142,23 +151,47 @@
                             <constraint firstItem="oyO-S5-SNv" firstAttribute="top" secondItem="HmJ-sk-4yI" secondAttribute="bottom" constant="10" id="0fl-K0-EQE"/>
                             <constraint firstItem="oyO-S5-SNv" firstAttribute="leading" secondItem="VMT-RC-GNH" secondAttribute="leading" constant="20" id="57w-c2-GEU"/>
                             <constraint firstItem="VMT-RC-GNH" firstAttribute="trailing" secondItem="HmJ-sk-4yI" secondAttribute="trailing" id="AUi-UY-8k8"/>
+                            <constraint firstItem="Cs3-Yr-UUV" firstAttribute="leading" secondItem="VMT-RC-GNH" secondAttribute="leading" id="CB1-mq-E1Q"/>
                             <constraint firstItem="HmJ-sk-4yI" firstAttribute="leading" secondItem="VMT-RC-GNH" secondAttribute="leading" id="Fut-FR-P0X"/>
+                            <constraint firstItem="VMT-RC-GNH" firstAttribute="trailing" secondItem="Cs3-Yr-UUV" secondAttribute="trailing" id="kEn-2R-HdK"/>
                             <constraint firstItem="VMT-RC-GNH" firstAttribute="bottom" secondItem="Cs3-Yr-UUV" secondAttribute="bottom" id="mWe-eZ-ah3"/>
                             <constraint firstItem="HmJ-sk-4yI" firstAttribute="top" secondItem="cQz-AJ-QBc" secondAttribute="topMargin" id="qNG-A7-qrt"/>
-                            <constraint firstItem="VMT-RC-GNH" firstAttribute="trailing" secondItem="Cs3-Yr-UUV" secondAttribute="trailing" constant="20" id="tzW-oH-vYh"/>
                             <constraint firstItem="Cs3-Yr-UUV" firstAttribute="top" secondItem="oyO-S5-SNv" secondAttribute="bottom" constant="10" id="vsL-OP-ZHT"/>
-                            <constraint firstItem="Cs3-Yr-UUV" firstAttribute="leading" secondItem="VMT-RC-GNH" secondAttribute="leading" constant="20" id="xp4-vf-LU4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VMT-RC-GNH"/>
                     </view>
+                    <navigationItem key="navigationItem" id="gdS-Gh-I3e"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Cs3-Yr-UUV" id="f7Z-84-0XD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W3D-Wn-l5u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-216.80000000000001" y="183.95802098950526"/>
+            <point key="canvasLocation" x="472.80000000000001" y="58.920539730134934"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="24t-f3-8JO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tIo-gx-5aN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Q1q-o1-qET">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BB5-sc-8hv" kind="relationship" relationship="rootViewController" id="1x6-uT-TKo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZKm-58-arg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-466.39999999999998" y="58.920539730134934"/>
         </scene>
     </scenes>
     <resources>
         <image name="icFilter" width="19" height="19"/>
+        <image name="picachu" width="480" height="270"/>
         <namedColor name="greyishBrownTwo">
             <color red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
