--- a/pream/Base.lproj/Main.storyboard
+++ b/pream/Base.lproj/Main.storyboard
@@ -180,6 +180,10 @@
                                     <constraint firstAttribute="height" constant="138" id="nvr-fU-Ff5"/>
                                 </constraints>
                             </view>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1av-25-bPo">
+                                <rect key="frame" x="0.0" y="107" width="375" height="567"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEd-gE-dL9">
                                 <rect key="frame" x="0.0" y="674" width="375" height="104"/>
                                 <subviews>
@@ -270,10 +274,13 @@
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9UA-3P-FPL"/>
                             <constraint firstItem="Q2H-nO-yAM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D1Y-IS-uD5"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dn3-8O-wiM"/>
+                            <constraint firstItem="1av-25-bPo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ER5-b0-MGj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1av-25-bPo" secondAttribute="trailing" id="Ei9-e7-c7J"/>
                             <constraint firstItem="Q2H-nO-yAM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="IKZ-3Y-ZFp"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JD9-I8-XdS"/>
                             <constraint firstAttribute="bottom" secondItem="7DG-UB-7q2" secondAttribute="bottom" id="K0V-k4-HSj"/>
                             <constraint firstItem="OwD-Zi-m1h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Lha-hS-Chk"/>
+                            <constraint firstItem="1av-25-bPo" firstAttribute="top" secondItem="UrY-P1-C8A" secondAttribute="bottom" id="O9w-SN-pxg"/>
                             <constraint firstAttribute="bottom" secondItem="mVf-gm-oAc" secondAttribute="bottom" id="QbH-jX-MVQ"/>
                             <constraint firstItem="Xr0-Oz-7Yd" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="SYf-2x-BoZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OwD-Zi-m1h" secondAttribute="trailing" id="UJl-gT-MHA"/>
@@ -286,6 +293,7 @@
                             <constraint firstItem="VEd-gE-dL9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="mDV-zF-mno"/>
                             <constraint firstItem="mVf-gm-oAc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mae-qU-fyF"/>
                             <constraint firstItem="UrY-P1-C8A" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mfJ-ra-SPb"/>
+                            <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="1av-25-bPo" secondAttribute="bottom" id="mrr-Es-KpS"/>
                             <constraint firstItem="7DG-UB-7q2" firstAttribute="top" secondItem="OwD-Zi-m1h" secondAttribute="bottom" id="xy2-w5-L5F"/>
                             <constraint firstItem="Q2H-nO-yAM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zIb-VR-wTV"/>
                         </constraints>
@@ -301,6 +309,7 @@
                         <outlet property="gpuImageView" destination="Q2H-nO-yAM" id="AnY-7U-ZLV"/>
                         <outlet property="libraryButton" destination="Avu-oK-WfQ" id="qPl-cZ-Fsq"/>
                         <outlet property="shotEffectView" destination="mVf-gm-oAc" id="Xwd-6d-zcP"/>
+                        <outlet property="shotView" destination="1av-25-bPo" id="69h-oQ-4Er"/>
                         <outlet property="topBlurView" destination="UrY-P1-C8A" id="cxD-lV-96u"/>
                         <outlet property="topBlurViewHeight" destination="LZT-xA-7L9" id="x7x-YE-cJT"/>
                     </connections>
